# ToFImaging

./: .gitignore  .travis.yml  AdvancedBraggEdgeFitting_v2.py  CalculateSummedImgs.ipynb  README.md  TOF_BinImages.ipynb  Untitled.ipynb  environment.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
JupyterNotebooks/: PhaseMappingDemo.ipynb  SpectrumPlotter.ipynb  StrainMappingDemo.ipynb  StrainMapping_UI.ipynb
MCPOverLapCorrection/: MCPOverLapCorrection.py  RunOverLapCorrection.ipynb
TOF_ImagingAlgorithm/: TOF_ImagingAlgorithm.pro  auxiliary_functions.cpp  auxiliary_functions.h  edgefitting.cpp  edgefitting.h  edgefunction.cpp  edgefunction.h  findclosest.h  iterative_edgefitting.cpp  iterative_edgefitting.h  tof2lambda.cpp  tof2lambda.h  tof_imagingalgorithm.cpp  tof_imagingalgorithm.h
ToFBundle/: ToFBundle.pro
ToFImaging/: FOBI_analysis.py  __init__.py  _version.py  edgefitting_1D.py  edgefitting_2D.py  phasefitting_2D.py  reduction_tools.py
cpp_modules/: TOF_ImagingAlgorithm.pro  auxiliary_functions.cpp  edgefitting.h  edgefunction.cpp  findclosest.h
docs/: UserManual-EdgeFitting.md  UserManual-PhaseFitting.md  UserManual-PythonModules.md  UserManual-ReductionTools.md  UserManual-RietveldFitting.md  UserManual-SingleBEfit.md  UserManual-installation.md  UserManual-introduction.md  UserManual-jupyter.md  index.md
jupyter_notebooks/: CalculateSummedImgs.ipynb  Call_edgefitting_2D.ipynb  Lineshape_testcases.ipynb  PhaseMapping_demo.ipynb  StrainMapping_UI.ipynb  StrainMapping_UI_clean_version.ipynb  StrainMapping_demo.ipynb  (+2 more)
tests/: guide.txt  (+3 more)
(+157 files in other folders)
