[metadata]
name = tofimaging
version = 1.0.1
author = Matteo Busi
author_email = mbusi2691@gmail.com
description = Library for neutron ToF imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutronimaging/ToFImaging
project_urls =
    Bug Tracker = https://github.com/neutronimaging/ToFImaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	astropy
	lmfit
	matplotlib
	numpy
	scikit-image
	scipy
	tqdm
	
[options.packages.find]
where = src
